add scaleway_token resource

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -40,6 +40,9 @@
             <li<%= sidebar_current("docs-scaleway-resource-volume") %>>
               <a href="/docs/providers/scaleway/r/volume.html">scaleway_volume</a>
             </li>
+            <li<%= sidebar_current("docs-scaleway-resource-token") %>>
+              <a href="/docs/providers/scaleway/r/token.html">scaleway_token</a>
+            </li>
             <li<%= sidebar_current("docs-scaleway-resource-volume_attachment") %>>
               <a href="/docs/providers/scaleway/r/volume_attachment.html">scaleway_volume_attachment</a>
             </li>
