add scaleway_user_data resource, update scaleway_server

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -43,6 +43,9 @@
             <li<%= sidebar_current("docs-scaleway-resource-token") %>>
               <a href="/docs/providers/scaleway/r/token.html">scaleway_token</a>
             </li>
+            <li<%= sidebar_current("docs-scaleway-resource-user_data") %>>
+              <a href="/docs/providers/scaleway/r/user_data.html">scaleway_user_data</a>
+            </li>
             <li<%= sidebar_current("docs-scaleway-resource-volume_attachment") %>>
               <a href="/docs/providers/scaleway/r/volume_attachment.html">scaleway_volume_attachment</a>
             </li>
