--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -19,6 +19,9 @@
             <li<%= sidebar_current("docs-scaleway-datasource-image") %>>
               <a href="/docs/providers/scaleway/d/image.html">scaleway_image</a>
             </li>
+            <li<%= sidebar_current("docs-scaleway-datasource-security-group") %>>
+              <a href="/docs/providers/scaleway/d/security_group.html">scaleway_security_group</a>
+            </li>
             <li<%= sidebar_current("docs-scaleway-datasource-volume") %>>
               <a href="/docs/providers/scaleway/d/volume.html">scaleway_volume</a>
             </li>
@@ -31,10 +34,10 @@
             <li<%= sidebar_current("docs-scaleway-resource-ip") %>>
               <a href="/docs/providers/scaleway/r/ip.html">scaleway_ip</a>
             </li>
-            <li<%= sidebar_current("docs-scaleway-resource-security_group") %>>
+            <li<%= sidebar_current("docs-scaleway-resource-security-group") %>>
               <a href="/docs/providers/scaleway/r/security_group.html">scaleway_security_group</a>
             </li>
-            <li<%= sidebar_current("docs-scaleway-resource-security_group_rule") %>>
+            <li<%= sidebar_current("docs-scaleway-resource-security-group-rule") %>>
               <a href="/docs/providers/scaleway/r/security_group_rule.html">scaleway_security_group_rule</a>
             </li>
             <li<%= sidebar_current("docs-scaleway-resource-server") %>>
@@ -43,13 +46,13 @@
             <li<%= sidebar_current("docs-scaleway-resource-token") %>>
               <a href="/docs/providers/scaleway/r/token.html">scaleway_token</a>
             </li>
-            <li<%= sidebar_current("docs-scaleway-resource-user_data") %>>
+            <li<%= sidebar_current("docs-scaleway-resource-user-data") %>>
               <a href="/docs/providers/scaleway/r/user_data.html">scaleway_user_data</a>
             </li>
-            <li<%= sidebar_current("docs-scaleway-resource-volume") %>>
+            <li<%= sidebar_current("docs-scaleway-resource-volume-x") %>>
               <a href="/docs/providers/scaleway/r/volume.html">scaleway_volume</a>
             </li>
-            <li<%= sidebar_current("docs-scaleway-resource-volume_attachment") %>>
+            <li<%= sidebar_current("docs-scaleway-resource-volume-attachment") %>>
               <a href="/docs/providers/scaleway/r/volume_attachment.html">scaleway_volume_attachment</a>
             </li>
           </ul>
