Adding `ssh_key` to the sidebar

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -43,6 +43,9 @@
             <li<%= sidebar_current("docs-scaleway-resource-server") %>>
               <a href="/docs/providers/scaleway/r/server.html">scaleway_server</a>
             </li>
+            <li<%= sidebar_current("docs-scaleway-resource-ssh-key") %>>
+              <a href="/docs/providers/scaleway/r/ssh_key.html">scaleway_ssh_key</a>
+            </li>
             <li<%= sidebar_current("docs-scaleway-resource-token") %>>
               <a href="/docs/providers/scaleway/r/token.html">scaleway_token</a>
             </li>
