provider/scaleway: add scaleway_bucket resource

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -31,6 +31,9 @@
         <li<%= sidebar_current("docs-scaleway-resource") %>>
           <a href="#">Resources</a>
           <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-scaleway-resource-bucket") %>>
+              <a href="/docs/providers/scaleway/r/bucket.html">scaleway_bucket</a>
+            </li>
             <li<%= sidebar_current("docs-scaleway-resource-ip") %>>
               <a href="/docs/providers/scaleway/r/ip.html">scaleway_ip</a>
             </li>
