--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -63,6 +63,17 @@
             </li>
           </ul>
         </li>
+
+        <li<%= sidebar_current("docs-scaleway-resource-compute") %>>
+          <a href="#">Scaleway Compute Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-scaleway-resource-compute-instance-ip") %>>
+              <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_compute_instance_ip</a>
+            </li>
+          </ul>
+        </li>
+
+
       </ul>
     </div>
   <% end %>
