--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -29,7 +29,7 @@
         </li>
 
         <li<%= sidebar_current("docs-scaleway-resource") %>>
-          <a href="#">Resources</a>
+          <a href="#">Deprecated Resources</a>
           <ul class="nav nav-visible">
             <li<%= sidebar_current("docs-scaleway-resource-bucket") %>>
               <a href="/docs/providers/scaleway/r/bucket.html">scaleway_bucket</a>
