doc: scaleway_compute_instance_server

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -34,6 +34,9 @@
             <li>
               <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_compute_instance_ip</a>
             </li>
+            <li>
+              <a href="/docs/providers/scaleway/r/compute_instance_server.html">scaleway_compute_instance_server</a>
+            </li>
           </ul>
         </li>
 
