doc: scaleway_storage_object_bucket

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -73,6 +73,16 @@
           </ul>
         </li>
 
+        <li<%= sidebar_current("docs-scaleway-resource-storage") %>>
+          <a href="#">Scaleway Storage Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-scaleway-resource-storage-object-bucket") %>>
+              <a href="/docs/providers/scaleway/r/storage_object_bucket.html">scaleway_storage_object_bucket</a>
+            </li>
+          </ul>
+        </li>
+
+
 
       </ul>
     </div>
