--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -29,7 +29,7 @@
         </li>
 
         <li<%= sidebar_current("docs-scaleway-resource") %>>
-          <a href="#">Resources</a>
+          <a href="#">Deprecated Resources</a>
           <ul class="nav nav-visible">
             <li<%= sidebar_current("docs-scaleway-resource-bucket") %>>
               <a href="/docs/providers/scaleway/r/bucket.html">scaleway_bucket</a>
@@ -65,7 +65,7 @@
         </li>
 
         <li<%= sidebar_current("docs-scaleway-resource-compute") %>>
-          <a href="#">Scaleway Compute Resources</a>
+          <a href="#">Compute Resources</a>
           <ul class="nav nav-visible">
             <li<%= sidebar_current("docs-scaleway-resource-compute-instance-ip") %>>
               <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_compute_instance_ip</a>
