doc: scaleway_compute_instance_volume

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -70,6 +70,9 @@
             <li<%= sidebar_current("docs-scaleway-resource-compute-instance-ip") %>>
               <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_compute_instance_ip</a>
             </li>
+            <li<%= sidebar_current("docs-scaleway-resource-compute-instance-volume") %>>
+              <a href="/docs/providers/scaleway/r/compute_instance_volume.html">scaleway_compute_instance_volume</a>
+            </li>
           </ul>
         </li>
 
