--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -30,6 +30,7 @@
 
         <li>
           <ul class="nav nav-visible">
+            <a href="#">Deprecated Resources</a>
             <li>
               <a href="/docs/providers/scaleway/r/bucket.html">scaleway_bucket</a>
             </li>
