--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -29,8 +29,17 @@
         </li>
 
         <li>
-          <a href="#">Deprecated Resources</a>
+          <a href="#">Compute Resources</a>
           <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_compute_instance_ip</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a href="#">Deprecated Resources</a>
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/r/bucket.html">scaleway_bucket</a>
             </li>
@@ -63,16 +72,6 @@
             </li>
           </ul>
         </li>
-
-        <li<%= sidebar_current("docs-scaleway-resource-compute") %>>
-          <a href="#">Compute Resources</a>
-          <ul class="nav nav-visible">
-            <li<%= sidebar_current("docs-scaleway-resource-compute-instance-ip") %>>
-              <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_compute_instance_ip</a>
-            </li>
-          </ul>
-        </li>
-
 
       </ul>
     </div>
