--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -35,6 +35,9 @@
               <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_compute_instance_ip</a>
             </li>
             <li>
+              <a href="/docs/providers/scaleway/r/compute_instance_volume.html">scaleway_compute_instance_volume</a>
+            </li>
+            <li>
               <a href="/docs/providers/scaleway/r/compute_instance_server.html">scaleway_compute_instance_server</a>
             </li>
           </ul>
