--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -27,6 +27,15 @@
             </li>
           </ul>
         </li>
+        
+        <li>
+          <a href="#">Storage Resources</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/storage_object_bucket.html">scaleway_storage_object_bucket</a>
+            </li>
+          </ul>
+        </li>
 
         <li<%= sidebar_current("docs-scaleway-resource") %>>
           <a href="#">Resources</a>
@@ -72,17 +81,6 @@
             </li>
           </ul>
         </li>
-
-        <li<%= sidebar_current("docs-scaleway-resource-storage") %>>
-          <a href="#">Scaleway Storage Resources</a>
-          <ul class="nav nav-visible">
-            <li<%= sidebar_current("docs-scaleway-resource-storage-object-bucket") %>>
-              <a href="/docs/providers/scaleway/r/storage_object_bucket.html">scaleway_storage_object_bucket</a>
-            </li>
-          </ul>
-        </li>
-
-
 
       </ul>
     </div>
