--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -44,6 +44,15 @@
         </li>
 
         <li>
+          <a href="#">Storage Resources</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/storage_object_bucket.html">scaleway_storage_object_bucket</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Deprecated Resources</a>
           <ul class="nav">
             <li>
@@ -78,7 +87,6 @@
             </li>
           </ul>
         </li>
-
       </ul>
     </div>
   <% end %>
