--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -10,6 +10,15 @@
           <a href="/docs/providers/scaleway/index.html">Scaleway Provider</a>
         </li>
 
+        <li>
+          <a href="#">Quides</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/regions_and_zones.html">Region and Zones</a>
+            </li>
+          </ul>
+        </li>
+
         <li<%= sidebar_current("docs-scaleway-datasource") %>>
           <a href="#">Data Sources</a>
           <ul class="nav nav-visible">
