--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -11,6 +11,15 @@
         </li>
 
         <li>
+          <a href="#">Guides</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/regions_and_zones.html">Region and Zones</a>
+            </li>
+          </ul>
+        </li>
+
+        <li<%= sidebar_current("docs-scaleway-datasource") %>>
           <a href="#">Data Sources</a>
           <ul class="nav nav-visible">
             <li>
