--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -14,6 +14,9 @@
           <a href="#">Guides</a>
           <ul class="nav nav-visible">
             <li>
+              <a href="/docs/providers/scaleway/migration_guide.html">Migrating to v2</a>
+            </li>
+            <li>
               <a href="/docs/providers/scaleway/regions_and_zones.html">Region and Zones</a>
             </li>
           </ul>
