--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -50,6 +50,9 @@
               <a href="/docs/providers/scaleway/r/compute_instance_placement_group.html">scaleway_compute_instance_placement_group</a>
             </li>
             <li>
+              <a href="/docs/providers/scaleway/r/compute_instance_security_group.html">scaleway_compute_instance_security_group</a>
+            </li>
+            <li>
               <a href="/docs/providers/scaleway/r/compute_instance_server.html">scaleway_compute_instance_server</a>
             </li>
             <li>
