--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -44,7 +44,7 @@
           <a href="#">Compute Resources</a>
           <ul class="nav nav-visible">
             <li>
-              <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_compute_instance_ip</a>
+              <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_instance_ip</a>
             </li>
             <li>
               <a href="/docs/providers/scaleway/r/compute_instance_placement_group.html">scaleway_compute_instance_placement_group</a>
