--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -65,7 +65,7 @@
           <a href="#">Storage Resources</a>
           <ul class="nav nav-visible">
             <li>
-              <a href="/docs/providers/scaleway/r/storage_object_bucket.html">scaleway_storage_object_bucket</a>
+              <a href="/docs/providers/scaleway/r/storage_object_bucket.html">scaleway_object_bucket</a>
             </li>
           </ul>
         </li>
