--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -41,31 +41,31 @@
         </li>
 
         <li>
-          <a href="#">Compute Resources</a>
+          <a href="#">Instance Resources</a>
           <ul class="nav nav-visible">
             <li>
-              <a href="/docs/providers/scaleway/r/compute_instance_ip.html">scaleway_instance_ip</a>
+              <a href="/docs/providers/scaleway/r/instance_ip.html">scaleway_instance_ip</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/r/compute_instance_placement_group.html">scaleway_instance_placement_group</a>
+              <a href="/docs/providers/scaleway/r/instance_placement_group.html">scaleway_instance_placement_group</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/r/compute_instance_security_group.html">scaleway_instance_security_group</a>
+              <a href="/docs/providers/scaleway/r/instance_security_group.html">scaleway_instance_security_group</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/r/compute_instance_server.html">scaleway_instance_server</a>
+              <a href="/docs/providers/scaleway/r/instance_server.html">scaleway_instance_server</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/r/compute_instance_volume.html">scaleway_instance_volume</a>
+              <a href="/docs/providers/scaleway/r/instance_volume.html">scaleway_instance_volume</a>
             </li>
           </ul>
         </li>
 
         <li>
-          <a href="#">Storage Resources</a>
+          <a href="#">Object Storage Resources</a>
           <ul class="nav nav-visible">
             <li>
-              <a href="/docs/providers/scaleway/r/storage_object_bucket.html">scaleway_object_bucket</a>
+              <a href="/docs/providers/scaleway/r/object_bucket.html">scaleway_object_bucket</a>
             </li>
           </ul>
         </li>
