--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -22,6 +22,15 @@
           </ul>
         </li>
 
+        <li>
+          <a href="#">Account Resources</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/account_ssk_key.html">account_ssk_key</a>
+            </li>
+          </ul>
+        </li>
+
         <li<%= sidebar_current("docs-scaleway-datasource") %>>
           <a href="#">Data Sources</a>
           <ul class="nav nav-visible">
