fix: baremetal doc

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -80,6 +80,15 @@
         </li>
 
         <li>
+          <a href="#">Baremetal Resources (Beta)</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/baremetal_server_beta.html">scaleway_baremetal_server_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Deprecated Resources</a>
           <ul class="nav">
             <li>
