fix: add k8s to index
Signed-off-by: Patrik Cyvoct <pcyvoct@scaleway.com>

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -89,6 +89,18 @@
         </li>
 
         <li>
+          <a href="#">Kubernetes Resources (Beta)</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/k8s_cluster_beta.html">scaleway_k8s_cluster_beta</a>
+            </li>
+            <li>
+              <a href="/docs/providers/scaleway/r/k8s_pool_beta.html">scaleway_k8s_pool_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Deprecated Resources</a>
           <ul class="nav">
             <li>
