fix broken link

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -26,7 +26,7 @@
           <a href="#">Account Resources</a>
           <ul class="nav nav-visible">
             <li>
-              <a href="/docs/providers/scaleway/r/account_ssk_key.html">account_ssk_key</a>
+              <a href="/docs/providers/scaleway/r/account_ssh_key.html">account_ssh_key</a>
             </li>
           </ul>
         </li>
