add item to menu

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -23,6 +23,14 @@
         </li>
 
         <li>
+          <a href="#">Account Data Sources</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/d/account_ssh_key.html">account_ssh_key</a>
+            </li>
+          </ul>
+        </li>
+        <li>
           <a href="#">Account Resources</a>
           <ul class="nav nav-visible">
             <li>
