--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -109,6 +109,21 @@
         </li>
 
         <li>
+          <a href="#">Load-Balencer Resources (Beta)</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/lb_beta.html">scaleway_lb_beta</a>
+            </li>
+            <li>
+              <a href="#">scaleway_lb_frontend_beta (Coming soon...)</a>
+            </li>
+            <li>
+              <a href="#">scaleway_lb_backend_beta (Coming soon...)</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Deprecated Resources</a>
           <ul class="nav">
             <li>
