doc: rework global documentation

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -23,36 +23,19 @@
         </li>
 
         <li>
-          <a href="#">Account Data Sources</a>
-          <ul class="nav nav-visible">
-            <li>
-              <a href="/docs/providers/scaleway/d/account_ssh_key.html">account_ssh_key</a>
-            </li>
-          </ul>
-        </li>
-        <li>
           <a href="#">Account Resources</a>
           <ul class="nav nav-visible">
             <li>
-              <a href="/docs/providers/scaleway/r/account_ssh_key.html">account_ssh_key</a>
+              <a href="/docs/providers/scaleway/r/account_ssh_key.html">scaleway_scaleway_account_ssh_key</a>
             </li>
           </ul>
         </li>
 
-        <li<%= sidebar_current("docs-scaleway-datasource") %>>
-          <a href="#">Data Sources</a>
+        <li>
+          <a href="#">Account Data Sources</a>
           <ul class="nav nav-visible">
             <li>
-              <a href="/docs/providers/scaleway/d/bootscript.html">scaleway_bootscript</a>
-            </li>
-            <li>
-              <a href="/docs/providers/scaleway/d/image.html">scaleway_image</a>
-            </li>
-            <li>
-              <a href="/docs/providers/scaleway/d/security_group.html">scaleway_security_group</a>
-            </li>
-            <li>
-              <a href="/docs/providers/scaleway/d/volume.html">scaleway_volume</a>
+              <a href="/docs/providers/scaleway/d/account_ssh_key.html">scaleway_account_ssh_key</a>
             </li>
           </ul>
         </li>
@@ -74,6 +57,24 @@
             </li>
             <li>
               <a href="/docs/providers/scaleway/r/instance_volume.html">scaleway_instance_volume</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a href="#">Instance Data Sources</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/d/bootscript.html">scaleway_bootscript</a>
+            </li>
+            <li>
+              <a href="/docs/providers/scaleway/d/image.html">scaleway_image</a>
+            </li>
+            <li>
+              <a href="/docs/providers/scaleway/d/security_group.html">scaleway_security_group</a>
+            </li>
+            <li>
+              <a href="/docs/providers/scaleway/d/volume.html">scaleway_volume</a>
             </li>
           </ul>
         </li>
