feat(lb): add lb_backend_beta resource (#303)

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -116,7 +116,7 @@
               <a href="/docs/providers/scaleway/r/lb_beta.html">scaleway_lb_beta</a>
             </li>
             <li>
-              <a href="#">scaleway_lb_frontend_beta (Coming soon...)</a>
+              <a href="/docs/providers/scaleway/r/lb_backend_beta.html">scaleway_lb_backend_beta</a>
             </li>
             <li>
               <a href="#">scaleway_lb_backend_beta (Coming soon...)</a>
