--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -119,7 +119,7 @@
               <a href="/docs/providers/scaleway/r/lb_backend_beta.html">scaleway_lb_backend_beta</a>
             </li>
             <li>
-              <a href="#">scaleway_lb_backend_beta (Coming soon...)</a>
+              <a href="/docs/providers/scaleway/r/lb_frontend_beta.html">scaleway_lb_frontend_beta</a>
             </li>
           </ul>
         </li>
