--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -146,6 +146,15 @@
         </li>
 
         <li>
+          <a href="#">Container Registry Resources</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/container_registry.html">scaleway_container_registry</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Marketplace Data Sources (Beta)</a>
           <ul class="nav nav-visible">
             <li>
