--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -110,7 +110,7 @@
         </li>
 
         <li>
-          <a href="#">Load-Balencer Resources (Beta)</a>
+          <a href="#">Load-Balancer Resources (Beta)</a>
           <ul class="nav nav-visible">
             <li>
               <a href="/docs/providers/scaleway/r/lb_beta.html">scaleway_lb_beta</a>
@@ -120,6 +120,15 @@
             </li>
             <li>
               <a href="/docs/providers/scaleway/r/lb_frontend_beta.html">scaleway_lb_frontend_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a href="#">Database Resources (Beta)</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/rdb_instance_beta.html">scaleway_rdb_instance_beta</a>
             </li>
           </ul>
         </li>
