feat: data source security group

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -71,7 +71,7 @@
               <a href="/docs/providers/scaleway/d/image.html">scaleway_image</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/d/security_group.html">scaleway_security_group</a>
+              <a href="/docs/providers/scaleway/d/instance_security_group.html">scaleway_instance_security_group</a>
             </li>
             <li>
               <a href="/docs/providers/scaleway/d/volume.html">scaleway_volume</a>
@@ -168,6 +168,16 @@
             </li>
           </ul>
         </li>
+
+        <li>
+          <a href="#">Deprecated Data Sources</a>
+          <ul class="nav">
+            <li>
+              <a href="/docs/providers/scaleway/d/security_group.html">scaleway_security_group</a>
+            </li>
+          </ul>
+        </li>
+
       </ul>
     </div>
   <% end %>
