--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -65,6 +65,9 @@
           <a href="#">Instance Data Sources</a>
           <ul class="nav nav-visible">
             <li>
+              <a href="/docs/providers/scaleway/d/instance_server.html">scaleway_instance_server</a>
+            </li>
+            <li>
               <a href="/docs/providers/scaleway/d/bootscript.html">scaleway_bootscript</a>
             </li>
             <li>
