feat: data source instance volume

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -79,6 +79,9 @@
             <li>
               <a href="/docs/providers/scaleway/d/volume.html">scaleway_volume</a>
             </li>
+            <li>
+              <a href="/docs/providers/scaleway/d/instance_server.html">scaleway_instance_server</a>
+            </li>
           </ul>
         </li>
 
