--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -68,10 +68,10 @@
               <a href="/docs/providers/scaleway/d/instance_server.html">scaleway_instance_server</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/d/bootscript.html">scaleway_bootscript</a>
+              <a href="/docs/providers/scaleway/d/instance_image.html">scaleway_instance_image</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/d/image.html">scaleway_image</a>
+              <a href="/docs/providers/scaleway/d/bootscript.html">scaleway_bootscript</a>
             </li>
             <li>
               <a href="/docs/providers/scaleway/d/instance_security_group.html">scaleway_instance_security_group</a>
@@ -177,6 +177,9 @@
           <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/d/security_group.html">scaleway_security_group</a>
+            </li>
+            <li>
+              <a href="/docs/providers/scaleway/d/image.html">scaleway_image</a>
             </li>
           </ul>
         </li>
