feat(instance): data source volume (#356)
* feat: data source instance volume

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -71,13 +71,13 @@
               <a href="/docs/providers/scaleway/d/instance_image.html">scaleway_instance_image</a>
             </li>
             <li>
+              <a href="/docs/providers/scaleway/d/instance_volume.html">scaleway_instance_volume</a>
+            </li>
+            <li>
               <a href="/docs/providers/scaleway/d/bootscript.html">scaleway_bootscript</a>
             </li>
             <li>
               <a href="/docs/providers/scaleway/d/instance_security_group.html">scaleway_instance_security_group</a>
-            </li>
-            <li>
-              <a href="/docs/providers/scaleway/d/volume.html">scaleway_volume</a>
             </li>
           </ul>
         </li>
@@ -180,6 +180,9 @@
             </li>
             <li>
               <a href="/docs/providers/scaleway/d/image.html">scaleway_image</a>
+            </li>
+            <li>
+              <a href="/docs/providers/scaleway/d/volume.html">scaleway_volume</a>
             </li>
           </ul>
         </li>
