--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -101,6 +101,15 @@
         </li>
 
         <li>
+          <a href="#">Baremetal Data Sources (Beta)</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/d/baremetal_offer_beta.html">scaleway_baremetal_offer_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Kubernetes Resources (Beta)</a>
           <ul class="nav nav-visible">
             <li>
