feat(marketplace): add image data source (beta)

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -146,6 +146,15 @@
         </li>
 
         <li>
+          <a href="#">Marketplace Data Sources (Beta)</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/marketplace_image_beta.html">scaleway_marketplace_image_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Deprecated Resources</a>
           <ul class="nav">
             <li>
