--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -110,6 +110,15 @@
         </li>
 
         <li>
+          <a href="#">Container Registry Resources</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/registry_namespace_beta.html">scaleway_registry_namespace_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Kubernetes Resources (Beta)</a>
           <ul class="nav nav-visible">
             <li>
