--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -53,6 +53,9 @@
               <a href="/docs/providers/scaleway/r/instance_security_group.html">scaleway_instance_security_group</a>
             </li>
             <li>
+              <a href="/docs/providers/scaleway/r/instance_security_group_rules.html">scaleway_instance_security_group_rules</a>
+            </li>
+            <li>
               <a href="/docs/providers/scaleway/r/instance_server.html">scaleway_instance_server</a>
             </li>
             <li>
