feat: added certificate to load-balancer

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -143,6 +143,9 @@
               <a href="/docs/providers/scaleway/r/lb_backend_beta.html">scaleway_lb_backend_beta</a>
             </li>
             <li>
+              <a href="/docs/providers/scaleway/r/lb_certificate_beta.html">scaleway_lb_certificate_beta</a>
+            </li>
+            <li>
               <a href="/docs/providers/scaleway/r/lb_frontend_beta.html">scaleway_lb_frontend_beta</a>
             </li>
           </ul>
