fix link in website
Signed-off-by: Patrik Cyvoct <pcyvoct@scaleway.com>

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -122,6 +122,15 @@
         </li>
 
         <li>
+          <a href="#">Container Registry Data Sources</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/d/registry_namespace_beta.html">scaleway_registry_namespace_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Kubernetes Resources (Beta)</a>
           <ul class="nav nav-visible">
             <li>
