feat(registry): add image data source
Signed-off-by: Patrik Cyvoct <pcyvoct@scaleway.com>

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -131,6 +131,15 @@
         </li>
 
         <li>
+          <a href="#">Container Registry Image Data Sources</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/r/registry_image_beta.html">scaleway_registry_image_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Kubernetes Resources (Beta)</a>
           <ul class="nav nav-visible">
             <li>
