feat(registry): add image data source (#409)
Signed-off-by: Patrik Cyvoct <pcyvoct@scaleway.com>

Co-authored-by: Quentin Brosse <qbrosse@scaleway.com>

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -113,7 +113,7 @@
         </li>
 
         <li>
-          <a href="#">Container Registry Resources</a>
+          <a href="#">Container Registry Resources (Beta)</a>
           <ul class="nav nav-visible">
             <li>
               <a href="/docs/providers/scaleway/r/registry_namespace_beta.html">scaleway_registry_namespace_beta</a>
@@ -122,10 +122,13 @@
         </li>
 
         <li>
-          <a href="#">Container Registry Namespace Data Sources</a>
+          <a href="#">Container Registry Data Sources (Beta)</a>
           <ul class="nav nav-visible">
             <li>
               <a href="/docs/providers/scaleway/d/registry_namespace_beta.html">scaleway_registry_namespace_beta</a>
+            </li>
+            <li>
+              <a href="/docs/providers/scaleway/d/registry_image_beta.html">scaleway_registry_image_beta</a>
             </li>
           </ul>
         </li>
