feat: mark baremetal ressource stable

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -92,19 +92,19 @@
         </li>
 
         <li>
-          <a href="#">Baremetal Resources (Beta)</a>
+          <a href="#">Baremetal Resources</a>
           <ul class="nav nav-visible">
             <li>
-              <a href="/docs/providers/scaleway/r/baremetal_server_beta.html">scaleway_baremetal_server_beta</a>
+              <a href="/docs/providers/scaleway/r/baremetal_server.html">scaleway_baremetal_server</a>
             </li>
           </ul>
         </li>
 
         <li>
-          <a href="#">Baremetal Data Sources (Beta)</a>
+          <a href="#">Baremetal Data Sources</a>
           <ul class="nav nav-visible">
             <li>
-              <a href="/docs/providers/scaleway/d/baremetal_offer_beta.html">scaleway_baremetal_offer_beta</a>
+              <a href="/docs/providers/scaleway/d/baremetal_offer.html">scaleway_baremetal_offer</a>
             </li>
           </ul>
         </li>
