doc: add instance_ip_reverse_dns in menu

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -47,6 +47,9 @@
               <a href="/docs/providers/scaleway/r/instance_ip.html">scaleway_instance_ip</a>
             </li>
             <li>
+              <a href="/docs/providers/scaleway/r/instance_ip_reverse_dns.html">instance_ip_reverse_dns</a>
+            </li>
+            <li>
               <a href="/docs/providers/scaleway/r/instance_placement_group.html">scaleway_instance_placement_group</a>
             </li>
             <li>
