doc: fix missing lbip in navbar and fix lb display
Signed-off-by: Patrik Cyvoct <pcyvoct@scaleway.com>

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -152,6 +152,9 @@
               <a href="/docs/providers/scaleway/r/lb_beta.html">scaleway_lb_beta</a>
             </li>
             <li>
+              <a href="/docs/providers/scaleway/r/lb_ip_beta.html">scaleway_lb_ip_beta</a>
+            </li>
+            <li>
               <a href="/docs/providers/scaleway/r/lb_backend_beta.html">scaleway_lb_backend_beta</a>
             </li>
             <li>
