feat(lb): add LB IP data source
Signed-off-by: Patrik Cyvoct <pcyvoct@scaleway.com>

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -167,6 +167,15 @@
         </li>
 
         <li>
+          <a href="#">Load-Balancer Data Sources (Beta)</a>
+          <ul class="nav nav-visible">
+            <li>
+              <a href="/docs/providers/scaleway/d/lb_ip_beta.html">scaleway_lb_ip_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Database Resources (Beta)</a>
           <ul class="nav nav-visible">
             <li>
