doc: fix k8s doc

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -12,7 +12,7 @@
 
         <li>
           <a href="#">Guides</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/guides/migration_guide_v2.html">Migrating to v2</a>
             </li>
@@ -24,7 +24,7 @@
 
         <li>
           <a href="#">Account Resources</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/r/account_ssh_key.html">scaleway_scaleway_account_ssh_key</a>
             </li>
@@ -33,7 +33,7 @@
 
         <li>
           <a href="#">Account Data Sources</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/d/account_ssh_key.html">scaleway_account_ssh_key</a>
             </li>
@@ -42,7 +42,7 @@
 
         <li>
           <a href="#">Instance Resources</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/r/instance_ip.html">scaleway_instance_ip</a>
             </li>
@@ -69,7 +69,7 @@
 
         <li>
           <a href="#">Instance Data Sources</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/d/instance_server.html">scaleway_instance_server</a>
             </li>
@@ -87,7 +87,7 @@
 
         <li>
           <a href="#">Object Storage Resources</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/r/object_bucket.html">scaleway_object_bucket</a>
             </li>
@@ -96,7 +96,7 @@
 
         <li>
           <a href="#">Baremetal Resources</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/r/baremetal_server.html">scaleway_baremetal_server</a>
             </li>
@@ -105,7 +105,7 @@
 
         <li>
           <a href="#">Baremetal Data Sources</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/d/baremetal_offer.html">scaleway_baremetal_offer</a>
             </li>
@@ -114,7 +114,7 @@
 
         <li>
           <a href="#">Container Registry Resources (Beta)</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/r/registry_namespace_beta.html">scaleway_registry_namespace_beta</a>
             </li>
@@ -123,7 +123,7 @@
 
         <li>
           <a href="#">Container Registry Data Sources (Beta)</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/d/registry_namespace_beta.html">scaleway_registry_namespace_beta</a>
             </li>
@@ -135,7 +135,7 @@
 
         <li>
           <a href="#">Kubernetes Resources (Beta)</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/r/k8s_cluster_beta.html">scaleway_k8s_cluster_beta</a>
             </li>
@@ -147,7 +147,7 @@
 
         <li>
           <a href="#">Load-Balancer Resources (Beta)</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/r/lb_beta.html">scaleway_lb_beta</a>
             </li>
@@ -168,7 +168,7 @@
 
         <li>
           <a href="#">Load-Balancer Data Sources (Beta)</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/d/lb_ip_beta.html">scaleway_lb_ip_beta</a>
             </li>
@@ -177,7 +177,7 @@
 
         <li>
           <a href="#">Database Resources (Beta)</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/r/rdb_instance_beta.html">scaleway_rdb_instance_beta</a>
             </li>
@@ -186,7 +186,7 @@
 
         <li>
           <a href="#">Marketplace Data Sources (Beta)</a>
-          <ul class="nav nav-visible">
+          <ul class="nav">
             <li>
               <a href="/docs/providers/scaleway/d/marketplace_image_beta.html">scaleway_marketplace_image_beta</a>
             </li>
