Add rdb_user_beta to website.

--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -181,6 +181,9 @@
             <li>
               <a href="/docs/providers/scaleway/r/rdb_instance_beta.html">scaleway_rdb_instance_beta</a>
             </li>
+            <li>
+               <a href="/docs/providers/scaleway/r/rdb_user_beta.html">scaleway_rdb_user_beta</a>
+            </li>
           </ul>
         </li>
 
