--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -188,6 +188,15 @@
         </li>
 
         <li>
+          <a href="#">Database Data Sources (Beta)</a>
+          <ul class="nav">
+            <li>
+              <a href="/docs/providers/scaleway/d/rdb_instance_beta.html">scaleway_rdb_instance_beta</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">Marketplace Data Sources (Beta)</a>
           <ul class="nav">
             <li>
