--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -116,7 +116,7 @@
           <a href="#">Container Registry Resources (Beta)</a>
           <ul class="nav">
             <li>
-              <a href="/docs/providers/scaleway/r/registry_namespace_beta.html">scaleway_registry_namespace_beta</a>
+              <a href="/docs/providers/scaleway/r/registry_namespace_beta.html">scaleway_registry_namespace</a>
             </li>
           </ul>
         </li>
@@ -125,10 +125,10 @@
           <a href="#">Container Registry Data Sources (Beta)</a>
           <ul class="nav">
             <li>
-              <a href="/docs/providers/scaleway/d/registry_namespace_beta.html">scaleway_registry_namespace_beta</a>
+              <a href="/docs/providers/scaleway/d/registry_namespace_beta.html">scaleway_registry_namespace</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/d/registry_image_beta.html">scaleway_registry_image_beta</a>
+              <a href="/docs/providers/scaleway/d/registry_image_beta.html">scaleway_registry_image</a>
             </li>
           </ul>
         </li>
@@ -137,10 +137,10 @@
           <a href="#">Kubernetes Resources (Beta)</a>
           <ul class="nav">
             <li>
-              <a href="/docs/providers/scaleway/r/k8s_cluster_beta.html">scaleway_k8s_cluster_beta</a>
+              <a href="/docs/providers/scaleway/r/k8s_cluster_beta.html">scaleway_k8s_cluster</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/r/k8s_pool_beta.html">scaleway_k8s_pool_beta</a>
+              <a href="/docs/providers/scaleway/r/k8s_pool_beta.html">scaleway_k8s_pool</a>
             </li>
           </ul>
         </li>
@@ -149,19 +149,19 @@
           <a href="#">Load-Balancer Resources (Beta)</a>
           <ul class="nav">
             <li>
-              <a href="/docs/providers/scaleway/r/lb_beta.html">scaleway_lb_beta</a>
+              <a href="/docs/providers/scaleway/r/lb_beta.html">scaleway_lb</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/r/lb_ip_beta.html">scaleway_lb_ip_beta</a>
+              <a href="/docs/providers/scaleway/r/lb_ip_beta.html">scaleway_lb_ip</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/r/lb_backend_beta.html">scaleway_lb_backend_beta</a>
+              <a href="/docs/providers/scaleway/r/lb_backend_beta.html">scaleway_lb_backend</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/r/lb_certificate_beta.html">scaleway_lb_certificate_beta</a>
+              <a href="/docs/providers/scaleway/r/lb_certificate_beta.html">scaleway_lb_certificate</a>
             </li>
             <li>
-              <a href="/docs/providers/scaleway/r/lb_frontend_beta.html">scaleway_lb_frontend_beta</a>
+              <a href="/docs/providers/scaleway/r/lb_frontend_beta.html">scaleway_lb_frontend</a>
             </li>
           </ul>
         </li>
@@ -170,7 +170,7 @@
           <a href="#">Load-Balancer Data Sources (Beta)</a>
           <ul class="nav">
             <li>
-              <a href="/docs/providers/scaleway/d/lb_ip_beta.html">scaleway_lb_ip_beta</a>
+              <a href="/docs/providers/scaleway/d/lb_ip_beta.html">scaleway_lb_ip</a>
             </li>
           </ul>
         </li>
@@ -179,10 +179,10 @@
           <a href="#">Database Resources (Beta)</a>
           <ul class="nav">
             <li>
-              <a href="/docs/providers/scaleway/r/rdb_instance_beta.html">scaleway_rdb_instance_beta</a>
+              <a href="/docs/providers/scaleway/r/rdb_instance_beta.html">scaleway_rdb_instance</a>
             </li>
             <li>
-               <a href="/docs/providers/scaleway/r/rdb_user_beta.html">scaleway_rdb_user_beta</a>
+               <a href="/docs/providers/scaleway/r/rdb_user_beta.html">scaleway_rdb_user</a>
             </li>
           </ul>
         </li>
@@ -200,7 +200,7 @@
           <a href="#">Marketplace Data Sources (Beta)</a>
           <ul class="nav">
             <li>
-              <a href="/docs/providers/scaleway/d/marketplace_image_beta.html">scaleway_marketplace_image_beta</a>
+              <a href="/docs/providers/scaleway/d/marketplace_image_beta.html">scaleway_marketplace_image</a>
             </li>
           </ul>
         </li>
