--- a/website/scaleway.erb
+++ b/website/scaleway.erb
@@ -188,10 +188,10 @@
         </li>
 
         <li>
-          <a href="#">Database Data Sources (Beta)</a>
+          <a href="#">Database Data Sources</a>
           <ul class="nav">
             <li>
-              <a href="/docs/providers/scaleway/d/rdb_instance_beta.html">scaleway_rdb_instance_beta</a>
+              <a href="/docs/providers/scaleway/d/rdb_instance.html">scaleway_rdb_instance</a>
             </li>
           </ul>
         </li>
